# sgt-json-puzzle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  composer.json  game.php  run_all_solvers.sh
phpwrapers/: base.php  dominosa.draft.php  dominosa.php  fifteen.draft.php  fifteen.php  filling.draft.php  filling.php  galaxies.draft.php  keen.draft.php  lightup.draft.php  lightup.php  loopy.draft.php  loopy.php  magnets.draft.php  magnets.php  map.draft.php  pattern.draft.php  pattern.php  signpost.draft.php  signpost.php  singles.draft.php  singles.php  slant.draft.php  slant.php  solo.draft.php  solo.php  tents.draft.php  tents.php  towers.draft.php  towers.php  unequal.draft.php  unequal.php  unruly.php
phpwrapers/draft/: base.php  dominosa.draft.php  fifteen.draft.php  filling.draft.php  galaxies.draft.php  keen.draft.php  lightup.draft.php  loopy.draft.php  magnets.draft.php  map.draft.php  pattern.draft.php  singles.draft.php  slant.draft.php  tents.draft.php  towers.draft.php  unequal.draft.php
sample-json/: base.json  pattern.json  signpost.json  solo.json  unruly.json
src/: Dominosa.php  Fifteen.php  Filling.php  Game.php  GridParser.php  Loopy.php  Magnets.php  Pattern.php  Singles.php  Slant.php  Solo.php  Tents.php  Towers.php  UnEqual.php  UnRuly.php
